# freelance-data-ai-market-intelligence

./: .gitignore  README.md  pyproject.toml
config/: relevance_taxonomy.yml  settings.yml  sources.yml
data/samples/: sampling_tracker_template.csv
docs/compliance/: arbeitnow_review.md  source_compliance_register.md
docs/data/: data_dictionary.md
docs/methodology/: relevance_filter.md  sampling_plan.md
src/market_intelligence/collectors/: arbeitnow.py
src/market_intelligence/models/: job_posting.py
src/market_intelligence/validation/: relevance.py
tests/unit/: test_arbeitnow_mapper.py  test_job_posting_model.py  test_relevance_filter.py
