[project]
name = "freelance-data-ai-market-intelligence"
version = "0.1.0"
description = "OSS-first market intelligence platform for freelance Data and AI demand analysis."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Fawad Ul Hassan", email = "fawad.hassan29@yahoo.com" }
]
dependencies = [
    "httpx>=0.28,<1",
    "pandas>=2.2,<3",
    "pyarrow>=18,<22",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "pyyaml>=6,<7",
    "rich>=13,<15",
]

[dependency-groups]
dev = [
    "ipykernel>=6,<7",
    "jupyterlab>=4,<5",
    "pytest>=8,<9",
    "ruff>=0.11,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_intelligence"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
